# paramGenerator

./: CMakeLists.txt  PitchProcessor.cpp  PitchProcessor.h  WaveGen.cpp  WaveGen.h  WaveProcessor.cpp  WaveProcessor.h  cons.cpp  cons.h  main.cpp
generator/: WaveGen.cpp  WaveGen.h
math/: soft_diff.h
processor/: PitchProcessor.cpp  PitchProcessor.h  WaveProcessor.cpp  WaveProcessor.h
reasoner/: bre_reasoner.cpp  bre_reasoner.h  bri_reasoner.cpp  bri_reasoner.h  pit_reasoner.cpp  pit_reasoner.h  vel_reasoner.cpp  vel_reasoner.h
struct/: Point.h  note_normal.h  note_simple.h
